# hwt-Fall23

./: README.md
challenge1/: CMakeLists.txt  README.md
challenge1/src/: CMakeLists.txt
challenge1/src/challenge1/: CMakeLists.txt  Challenge1ASTLib.h  Challenge1Conf.h  Challenge1Lang.h  Challenge1Lib.cpp  Challenge1Msg.h
challenge1/src/challenge1/Matchers/: CMakeLists.txt  Msg1.h  Msg2.h
challenge1/src/challenge1/Matchers/Msg1/: CMakeLists.txt  Msg1.h
challenge1/src/challenge1/Matchers/Msg2/: CMakeLists.txt  Msg2.h
challenge1/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
challenge1/test/BOTH/: both_test1.cpp  both_test2.cpp  both_test3.cpp  both_test4.cpp  both_test5.cpp  both_test6.cpp  both_test7.cpp  both_test8.cpp
challenge1/test/CLI/: PrintHelp.cpp  PrintMsg1Help.cpp  PrintMsg2Help.cpp
challenge1/test/MSG1/: msg1_test1.cpp  msg1_test2.cpp  msg1_test3.cpp
challenge1/test/MSG2/: msg2_test1.cpp  msg2_test2.cpp  msg2_test3.cpp  msg2_test4.cpp  msg2_test5.cpp
challenge2/: README.md
challenge2/Merlin/DragonFly/: DragonFly.py  StatisticOutput.csv
challenge2/Merlin/FatTree/: FatTree.py  StatisticOutput.csv
challenge2/Merlin/Torus/: StatisticOutput.csv  Torus.py
challenge2/Merlin/Torus_LARGE/: StatisticOutput_0.csv  StatisticOutput_1.csv  StatisticOutput_10.csv  StatisticOutput_100.csv  StatisticOutput_101.csv  StatisticOutput_102.csv  StatisticOutput_103.csv  StatisticOutput_104.csv  StatisticOutput_105.csv  StatisticOutput_106.csv  StatisticOutput_107.csv  StatisticOutput_108.csv  StatisticOutput_109.csv  StatisticOutput_11.csv  StatisticOutput_110.csv  StatisticOutput_111.csv  StatisticOutput_12.csv  StatisticOutput_13.csv  StatisticOutput_14.csv  StatisticOutput_15.csv  StatisticOutput_16.csv  StatisticOutput_17.csv  StatisticOutput_18.csv  StatisticOutput_19.csv  StatisticOutput_2.csv  StatisticOutput_20.csv  StatisticOutput_21.csv  StatisticOutput_22.csv  StatisticOutput_23.csv  StatisticOutput_24.csv  StatisticOutput_25.csv  StatisticOutput_26.csv  StatisticOutput_27.csv  StatisticOutput_28.csv  StatisticOutput_29.csv  StatisticOutput_3.csv  StatisticOutput_30.csv  StatisticOutput_31.csv  StatisticOutput_32.csv  StatisticOutput_33.csv  (+74 more)
challenge2/Rev/ManyCore/: StatisticOutput.csv
challenge2/Rev/MultiCPU/: StatisticOutput.csv
challenge2/Rev/MultiCPU_LARGE/: MultiCPU.py  StatisticOutput_0.csv  StatisticOutput_1.csv  StatisticOutput_10.csv  StatisticOutput_100.csv  StatisticOutput_101.csv  StatisticOutput_102.csv  StatisticOutput_103.csv  StatisticOutput_104.csv  StatisticOutput_105.csv  StatisticOutput_106.csv  StatisticOutput_107.csv  StatisticOutput_108.csv  StatisticOutput_109.csv  StatisticOutput_11.csv  StatisticOutput_110.csv  StatisticOutput_111.csv  StatisticOutput_12.csv  StatisticOutput_13.csv  StatisticOutput_14.csv  StatisticOutput_15.csv  StatisticOutput_16.csv  StatisticOutput_17.csv  StatisticOutput_18.csv  StatisticOutput_19.csv  StatisticOutput_2.csv  StatisticOutput_20.csv  StatisticOutput_21.csv  StatisticOutput_22.csv  StatisticOutput_23.csv  StatisticOutput_24.csv  StatisticOutput_25.csv  StatisticOutput_26.csv  StatisticOutput_27.csv  StatisticOutput_28.csv  StatisticOutput_29.csv  StatisticOutput_3.csv  StatisticOutput_30.csv  StatisticOutput_31.csv  StatisticOutput_32.csv  (+74 more)
challenge2/Rev/SingleCore/: SingleCore.py  StatisticOutput.csv
