# CHALLENGE1 src/CMakeLists.txt
#
# Copyright (C) 2017-2023 Tactical Computing Laboratories, LLC
# All Rights Reserved
# contact@tactcomplabs.com
#
# See LICENSE in the top level directory for licensing details
#

#------------------------------------------------------------------------
# Add subdirectories
#------------------------------------------------------------------------
add_subdirectory(challenge1)

# EOF
